[build-system]
requires = [
  "marko==2.1.4",
  "ruamel.yaml==0.18.14",
  "setuptools==80.9.0",
  "wheel==0.45.1",
]

[project]
name = "eth2spec"
dynamic = ["version"]
authors = [{ name = "ethereum" }]
description = "Ethereum consensus layer specifications package"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9,<4.0"
dependencies = [
  "curdleproofs==0.1.2",
  "eth-typing==5.2.1",
  "eth-utils==5.3.0",
  "lru-dict==1.3.0",
  "marko==2.1.4",
  "milagro_bls_binding==1.9.0",
  "py_arkworks_bls12381==0.3.8",
  "py_ecc==8.0.0",
  "pycryptodome==3.23.0",
  "remerkleable==0.1.28",
  "ruamel.yaml==0.18.14",
  "setuptools==80.9.0",
  "trie==3.1.0",
]

[project.optional-dependencies]
test = [
  "pytest-cov==6.2.1",
  "pytest-xdist==3.7.0",
  "pytest==8.4.0",
]
lint = [
  "black==25.1.0",
  "codespell==2.4.1",
  "mdformat-gfm-alerts==2.0.0",
  "mdformat-gfm==0.4.1",
  "mdformat-toc==0.3.0",
  "mdformat==0.7.22",
  "mypy==1.16.0",
  "pylint==3.3.7",
]
generator = [
  "filelock==3.18.0",
  "pathos==0.3.4",
  "pytest==8.4.0",
  "python-snappy==0.7.3",
]
docs = [
  "mdx-truly-sane-lists==1.3",
  "mkdocs-awesome-pages-plugin==2.10.1",
  "mkdocs-material==9.6.14",
  "mkdocs==1.6.1",
]

[tool.black]
line-length = 100
